@@ -142,6 +142,8 @@ public:
 	std::string ToExpression() const noexcept;
 
 private:
+	const char *ParseExpression(const char *s, bool fold_case=false);
+
 	gcc_nonnull(2,3)
 	void Parse(const char *tag, const char *value, bool fold_case=false);
 
